force-app/main/default/objects/blng__Invoice__c/blng__Invoice__c.object-meta.xml
<CustomObject>
    <description>Storing the Invoices.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>