force-app/main/default/objects/blng__Invoice__c/fields/InvoiceDateSummary__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDateSummary__c</fullName>
    <label>Invoice Date (Summary)</label>
    <summarizedField>blng__InvoiceLine__c.blng__StartDate__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>